Occasional off-by-one errors in renderborder #48566

Closed
opened 2016-06-01 22:12:29 +02:00 by gandalf3 · 8 comments
Member

System Information
Archlinux

Blender Version
Broken: from 2.73a to latest buildbot (8cf8679)
Worked: 2.72b

Short description of error

In camera view, the rendered region is sometimes offset from the renderborder by one pixel:

examp081.png

As far as I can tell, this only occurs in camera view.

Exact steps for others to reproduce the error

  1. Start blender
  2. Switch to camera view, set a render border (smaller renderborders tend to be more susceptible, but it can happen to sizeable renderborders too)
  3. Carefully zoom in and out while watching the border edges for 1 pixel gaps
**System Information** Archlinux **Blender Version** Broken: from 2.73a to latest buildbot (8cf8679) Worked: 2.72b **Short description of error** In camera view, the rendered region is sometimes offset from the renderborder by one pixel: ![examp081.png](https://archive.blender.org/developer/F315622/examp081.png) As far as I can tell, this only occurs in camera view. **Exact steps for others to reproduce the error** 1. Start blender 2. Switch to camera view, set a render border (smaller renderborders tend to be more susceptible, but it can happen to sizeable renderborders too) 3. Carefully zoom in and out while watching the border edges for 1 pixel gaps
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @NikoLeopold

Added subscriber: @NikoLeopold

Can confirm, also on Archlinux with 2.77a.

Can confirm, also on Archlinux with 2.77a.

This issue was referenced by c4b23a57a9

This issue was referenced by c4b23a57a9c4f2ca82a1402d16e44237eaed54b7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Seems like the rendered region is defined at float precision whereas the border is positioned at int precision via sboxdraw which uses glVertex2i. Apparently the int precision was introduced a few years ago when (i guess) the rendered region was defined differently as well (blender/blender-staging@37ff3).

Switching back to using glVertex2f via fboxdraw yields nice results, but i'm not sure if i am missing something.

diff.txt

Seems like the rendered region is defined at float precision whereas the border is positioned at int precision via `sboxdraw` which uses `glVertex2i`. Apparently the int precision was introduced a few years ago when (i guess) the rendered region was defined differently as well (blender/blender-staging@37ff3). Switching back to using `glVertex2f` via `fboxdraw` yields nice results, but i'm not sure if i am missing something. [diff.txt](https://archive.blender.org/developer/F315687/diff.txt)

Oh well Campbell did fix it already ;)

Oh well Campbell did fix it already ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48566
No description provided.