Fix T48566: Render-border minor offset issue